@@ -37,10 +37,20 @@ sub _start_of_date {
       if !ref($tz);
 
    my $target_day = ( $dt->local_rd_values )[0];
-   my $min_epoch = int($dt->epoch()/60) - 24*60;
-   my $max_epoch = int($dt->epoch()/60) + 24*60;
+   my $epoch = int($dt->epoch / 60);
+
+   # Most of the time, we don't need to do anything special.
+   if (eval { $dt->set_time_zone($tz); 1 }) {
+      # Make sure we have the right midnight if this day has two midnights.
+      if (( $dt->clone->subtract( seconds => 1 )->local_rd_values )[0] < $target_day) {
+         return $dt;
+      }
+   }
+
+   my $min_epoch = $epoch - 24*60;
+   my $max_epoch = $epoch + 24*60;
    while ($max_epoch > $min_epoch) {
-      my $epoch = ( $min_epoch + $max_epoch ) >> 1;
+      $epoch = ( $min_epoch + $max_epoch ) >> 1;
       if (( DateTime->from_epoch( epoch => $epoch*60, time_zone => $tz )->local_rd_values )[0] < $target_day) {
          $min_epoch = $epoch + 1;
       } else {
