@@ -1,6 +1,8 @@
 Revision history for DateTimeX-Start
 
 1.6.0   ~~~~-~~-~~
+        - Optimized based on the assumption that most calls will be for days
+          with a midnight and only one midnight.
         - ~~~
 
 1.4.0   2016-10-31
